[gd_scene load_steps=4 format=3 uid="uid://dsxq3lfwro14p"]

[ext_resource type="Theme" uid="uid://b6c0jw385qavt" path="res://Battle Scene/Menu Assets/Text.tres" id="1_7080c"]
[ext_resource type="Script" uid="uid://dquanyip4a2rp" path="res://GUI/FieldMenu/stats_window.gd" id="1_aklal"]
[ext_resource type="FontFile" uid="uid://b5da3j3tqxasx" path="res://GUI/FourPixelsFont.ttf" id="2_7080c"]

[node name="StatsWindow" type="HBoxContainer"]
clip_contents = true
offset_top = 81.0
offset_right = 90.0
offset_bottom = 129.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 12.01
theme = ExtResource("1_7080c")
theme_override_constants/separation = 5
script = ExtResource("1_aklal")

[node name="StatNames" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.42
alignment = 1

[node name="Label" type="Label" parent="StatNames"]
layout_mode = 2
text = "Card Power"

[node name="Label2" type="Label" parent="StatNames"]
layout_mode = 2
text = "Defense"

[node name="Label3" type="Label" parent="StatNames"]
layout_mode = 2
text = "Speed"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="OldValues" type="VBoxContainer" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 7
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/OldValues"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7080c")
theme_override_font_sizes/font_size = 4
text = "999"

[node name="Label2" type="Label" parent="HBoxContainer/OldValues"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7080c")
theme_override_font_sizes/font_size = 4
text = "999"

[node name="Label3" type="Label" parent="HBoxContainer/OldValues"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7080c")
theme_override_font_sizes/font_size = 4
text = "999"

[node name="Arrows" type="VBoxContainer" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 7
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/Arrows"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7080c")
theme_override_font_sizes/font_size = 4
text = "->"

[node name="Label2" type="Label" parent="HBoxContainer/Arrows"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7080c")
theme_override_font_sizes/font_size = 4
text = "->"

[node name="Label3" type="Label" parent="HBoxContainer/Arrows"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7080c")
theme_override_font_sizes/font_size = 4
text = "->"

[node name="NewValues" type="VBoxContainer" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 7
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/NewValues"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7080c")
theme_override_font_sizes/font_size = 4
text = "999"

[node name="Label2" type="Label" parent="HBoxContainer/NewValues"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7080c")
theme_override_font_sizes/font_size = 4
text = "999"

[node name="Label3" type="Label" parent="HBoxContainer/NewValues"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7080c")
theme_override_font_sizes/font_size = 4
text = "999"
